# get_selected_text_2

./: Cargo.toml
src/: lib.rs
